@@ -1,1 +1,2 @@
 # Multithreaded-snake-game-with-AI
+usefull JavaFX VM option for windows: --module-path "\path\to\javafx-sdk-15.0.1\lib" --add-modules javafx.controls,javafx.fxml
